# nix-sandbox

./: README.md  flake.nix
demo/01-devshell/: flake.nix
demo/02-devshell-flake-utils/: flake.nix
demo/03-devshell-oxalica/: flake.nix
demo/10-package-crane/: .gitignore  Cargo.toml  flake.nix
demo/10-package-crane/src/: main.rs
demo/11-package-src-input-diff/: flake.nix  stabilizer.diff
demo/12-package-poetry2nix/: .gitignore  README.md  flake.nix  pyproject.toml
demo/12-package-poetry2nix/foo/: main.py
node-devshell/: flake.nix
python-devshell-artiq-dax/: flake.nix
rust-devshell-zigbuild/: flake.nix
